# calculator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/calculator/: calculator_core.hpp  calculator_gui.hpp
src/: main.cpp
src/core/: CMakeLists.txt  calculator_core.cpp
src/gui/: CMakeLists.txt  calculator_gui.cpp
tests/: CMakeLists.txt  test_calculator.cpp
